<resources>
    <string name="app_name">MultiGaming</string>
    <string name="bracket">()</string>
    <string name="AC">AC</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiple">X</string>
    <string name="divide">/</string>
    <string name="percent">%</string>
    <string name="ce">CE</string>
    <string name="doublezero">00</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="size_of_board">3</string>
    <string name="X">" X "</string>
    <string name="O">" O "</string>
    <string name="none">" "</string>
    <string name="action_settings">Settings</string>
    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
    <string name="title">Do you want to delete?</string>
    <string name="delete">Delete</string>
    <string name="point_of_view">Point of View</string>
    <string name="dual">Dual</string>
    <string name="new_game">New Game</string>
    <string name="control">Control :</string>
    <string name="sound">Sound :</string>
    <string name="on">On</string>
    <string name="off">Off</string>


</resources>