<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:rowCount="2"
    android:columnCount="1"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color"
    tools:context=".CalculatorActivity">

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/textview"
        android:layout_height="120sp"
        android:background="#F0F0F0"
        android:textDirection="ltr"
        android:textSize="40sp"
        android:text="@string/zero"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"


        />
    <GridLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:layout_marginLeft="17.5dp"
        android:layout_marginRight="17.5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:columnCount="4"
        android:textColor="@color/white"

        >
        <Button
            android:id="@+id/AC"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/AC"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:background="@drawable/cross_round"
            />
        <Button

            android:textColor="@color/white"
            android:id="@+id/CE"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/ce"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:background="@drawable/cross_round"
            />

        <Button
            android:id="@+id/percent"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/percent"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:background="@drawable/arithmatic_round"
            android:textColor="@color/white"
            />
        <Button
            android:id="@+id/divide"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/divide"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:textColor="@color/white"

            android:background="@drawable/arithmatic_round"
            />
        <Button
            android:id="@+id/seven"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/seven"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:background="@drawable/round_button"
            android:textColor="@color/white"

            />
        <Button
            android:id="@+id/eight"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/eight"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            />
        <Button
            android:textColor="@color/white"
            android:id="@+id/nine"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/nine"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:background="@drawable/round_button"
            />
        <Button
            android:id="@+id/multiple"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/multiple"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:background="@drawable/arithmatic_round"
            android:textColor="@color/white"
            />
        <Button
            android:textColor="@color/white"
            android:id="@+id/four"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/four"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:background="@drawable/round_button"
            />
        <Button
            android:textColor="@color/white"
            android:id="@+id/five"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/five"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:background="@drawable/round_button"
            />
        <Button
            android:textColor="@color/white"
            android:id="@+id/six"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/six"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:background="@drawable/round_button"
            />
        <Button
            android:id="@+id/minus"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/minus"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:background="@drawable/arithmatic_round"
            android:textColor="@color/white"
            />


        <Button
            android:textColor="@color/white"
            android:id="@+id/one"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/one"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:background="@drawable/round_button"
            />
        <Button
            android:textColor="@color/white"
            android:id="@+id/two"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/two"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:background="@drawable/round_button"
            />
        <Button
            android:textColor="@color/white"
            android:id="@+id/three"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/three"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:background="@drawable/round_button"
            />
        <Button
            android:id="@+id/plus"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/plus"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:background="@drawable/arithmatic_round"
            />


        <Button
            android:textColor="@color/white"
            android:id="@+id/zero"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/zero"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:background="@drawable/round_button"
            />
        <Button
            android:textColor="@color/white"
            android:id="@+id/doublezero"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/doublezero"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:background="@drawable/round_button"
            />
        <Button
            android:textColor="@color/white"
            android:id="@+id/dot"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/dot"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:background="@drawable/round_button"
            />
        <Button
            android:id="@+id/equal"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/equal"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:background="@drawable/equal_round"
            android:textColor="@color/white"
            />

    </GridLayout>
    <Button
        android:id="@+id/back"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:text="back"
        android:textSize="15sp"
        android:layout_margin="1dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:layout_marginLeft="160dp"
        />

</GridLayout>